Interface de interação com usuario adicionada